hero container added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
+    <!-- landing page content -->
+    <section id="hero-container">
+        <div id="hero-txt">
+          <h1>Play the Keytar!</h1>
+          <h3>Join us and learn the transferable skill <br> to play the <u>Keytar, Piano and Synth!</u></h3>
+          <div id="buttons">
+          <a href="piano.html"><i class="ri-play-mini-line"></i>Try it now!</a>
+          <a href="subscription.html">Subscribe</a>
+          </div>
+        </div>
+        <div id="hero-img">
+           <img src="images/homeimage.png">
+        </div>
+    </section>
     
 </body>
 </html>
