features section added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,43 @@
            <img src="images/homeimage.png">
         </div>
     </section>
+    <section>
+        <div class="row">
+          <h1 class="title-txt">Features</h1>
+        </div>
+        <div class="row">
+            <!-- box 1-->
+          <div class="column">
+            <div class="card">
+              <div class="img-container">
+                <img src="images/music-note-list.png" alt="musical-note"/>
+              </div>
+              <h3>Learn Theory</h3>
+              <p>Learn all the necessary theory how to build chords and scales!</p>
+            </div>
+          </div>
+            <!-- box 2-->
+          <div class="column">
+            <div class="card">
+              <div class="img-container">
+                <img src="images/metronome.png" alt="metronome"/>
+              </div>
+              <h3>Metronome</h3>
+              <p>Incorporate our online metronome in your daily practice!</p>
+            </div>
+          </div>
+            <!-- box 3-->
+          <div class="column">
+            <div class="card">
+              <div class="img-container">
+                <img src="images/piano.png" alt="piano"/>
+              </div>
+              <h3>Interactive keys </h3>
+              <p>Learn and practice scales and chords with our interactive piano!</p>
+            </div>
+          </div>
+        </div>
+    </section>
     
 </body>
 </html>
