comments and review section added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
            <img src="images/homeimage.png">
         </div>
     </section>
+    <!-- features section -->
     <section>
         <div class="row">
           <h1 class="title-txt">Features</h1>
@@ -79,6 +80,17 @@
           </div>
         </div>
     </section>
+    <!-- reviews section -->
+    <section id="testimonial-container">
+        <div class="row">
+          <h1 class="title-txt">Reviews</h1>
+        </div>
+        <div class="rev-wrap">
+          <div class="review-container" id="review-container"></div>
+          <button id="prev" class="slider-btn">&lt;</button>
+          <button id="next" class="slider-btn">&gt;</button>
+        </div>
+     </section>
     
 </body>
 </html>
