footer section added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
           <button id="next" class="slider-btn">&gt;</button>
         </div>
      </section>
-    
+    <!-- footer section -->
+    <footer>
+        <span>Socials:</span>
+        <a><i class="ri-linkedin-box-fill"></i></a>
+        <a><i class="ri-github-fill"></i></a>
+       </footer>
 </body>
 </html>
