links and icons added to footer

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <!-- footer section -->
     <footer>
         <span>Socials:</span>
-        <a><i class="ri-linkedin-box-fill"></i></a>
-        <a><i class="ri-github-fill"></i></a>
+        <a href="https://www.linkedin.com/in/sebastian-pintyer-a0201a264" target="_blank" rel="noopener"><i class="ri-linkedin-box-fill"></i></a>
+        <a href="https://github.com/PSebastian96" target="_blank" rel="noopener"><i class="ri-github-fill"></i></a>
        </footer>
 </body>
 </html>
