text and img added

--- a/subscription.html
+++ b/subscription.html
@@ -29,4 +29,13 @@
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
+     <!-- landing page content -->
+     <section id="hero-container">
+        <div id="hero-txt">
+          <h2 id="sub-txt">Subscribe to KeytarSchool!</h2>
+        </div>
+        <div id="monster-img">
+           <img src="assets/images/monsterheadphone-removebg-preview.png">
+        </div>
+        </section>
        
