--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div id="hero-img">
-           <img src="images/homeimage.png">
+           <img src="assets/images/homeimage.png">
         </div>
     </section>
     <!-- features section -->
@@ -52,7 +52,7 @@
           <div class="column">
             <div class="card">
               <div class="img-container">
-                <img src="images/music-note-list.png" alt="musical-note"/>
+                <img src="assets/images/music-note-list.png" alt="musical-note"/>
               </div>
               <h3>Learn Theory</h3>
               <p>Learn all the necessary theory how to build chords and scales!</p>
@@ -62,7 +62,7 @@
           <div class="column">
             <div class="card">
               <div class="img-container">
-                <img src="images/metronome.png" alt="metronome"/>
+                <img src="assets/images/metronome.png" alt="metronome"/>
               </div>
               <h3>Metronome</h3>
               <p>Incorporate our online metronome in your daily practice!</p>
@@ -72,7 +72,7 @@
           <div class="column">
             <div class="card">
               <div class="img-container">
-                <img src="images/piano.png" alt="piano"/>
+                <img src="assets/images/piano.png" alt="piano"/>
               </div>
               <h3>Interactive keys </h3>
               <p>Learn and practice scales and chords with our interactive piano!</p>
