subscription boxes added

--- a/subscription.html
+++ b/subscription.html
@@ -93,4 +93,74 @@
             </div>
         </div>
         </section>
-       
+      
+        <!-- Subscription section -->
+    <section>
+        <div class="row">
+            <h1 class="ftrs-txt">Subscription Plans</h1>
+        </div>
+        <div class="sub-wrapper">
+            <!-- sub box 1-->
+            <div class="sub-card">
+                <div class="sub-type">Free</div>
+                <div class="content">
+                <h3 class="title">Beginner</h3>
+                <p class="price">
+                    <span class="sign">£</span>
+                    <span class="value">0</span>
+                    <span class="duration">month</span>
+                </p>
+                <ul class="tier-list">
+                    <li>- Interactive Piano</li>
+                    <li>- Online Metronome</li>
+                    <li>- Music Theory</li>
+                </ul>
+                </div>
+                <button class="sub-btn">Select</button>
+            </div>
+            <!-- sub box 2-->
+            <div class="sub-card">
+                <div class="sub-type">Pro</div>
+                <div class="content">
+                <h3 class="title">Advanced</h3>
+                <p class="price">
+                    <span class="sign">£</span>
+                    <span class="value">7</span>
+                    <span class="cent">.99</span>
+                    <span class="duration">month</span>
+                </p>
+                <ul class="tier-list">
+                    <li>Interactive Piano</li>
+                    <li>Online Metronome</li>
+                    <li>Music Theory</li>
+                    <li>Live Lessons</li>
+                    <li>Keytar member club</li>
+                </ul>
+                </div>
+                <button class="sub-btn">Select</button>
+            </div>
+            <!-- sub box 3-->
+                <div class="sub-card">
+                    <div class="sub-type">Ultra</div>
+                    <div class="content">
+                    <h3 class="title">Business</h3>
+                    <p class="price">
+                        <span class="sign">£</span>
+                        <span class="value">14</span>
+                        <span class="cent">.99</span>
+                    </p>
+                    <p class="duration">month</p>
+                    <ul class="tier-list">
+                        <li>Interactive Piano</li>
+                        <li>Online Metronome</li>
+                        <li>Music Theory</li>
+                        <li>Live Lessons</li>
+                        <li>Keytar member club</li>
+                    </ul>
+                    </div>
+                    <button class="sub-btn">Select</button>
+                </div>
+            </div>
+        </div>
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
