modal div added

--- a/subscription.html
+++ b/subscription.html
@@ -38,7 +38,7 @@
         <div id="monster-img">
            <img src="assets/images/monsterheadphone-removebg-preview.png">
         </div>
-        </section>
+     </section>
         
         <!-- Freaquently Asked Questions-->
     <section id="faq-container">
@@ -162,5 +162,17 @@
                 </div>
             </div>
         </div>
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
+         <!-- The Modal -->
+         <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+             <div class="modal-content">
+                <span class="close">&times;</span>
+                <h3>Thank you for subscribing! :)</h3>
+                <p>To complete your subscription please register by clicking <a href="login.html">here!</a></p>
+                <div id="cancel-center-btn">
+                    <button id="cancel-btn">Cancel Subscription</button>
+                </div>
+            </div>
+          </div>
+    </section>
