--- a/subscription.html
+++ b/subscription.html
@@ -176,5 +176,12 @@
             </div>
           </div>
     </section>
+
+    <!-- footer section -->
+    <footer>
+        <span>Socials:</span>
+        <a href="https://www.linkedin.com/in/sebastian-pintyer-a0201a264" target="_blank" rel="noopener"><i class="ri-linkedin-box-fill"></i></a>
+        <a href="https://github.com/PSebastian96" target="_blank" rel="noopener"><i class="ri-github-fill"></i></a>
+    </footer>
 </body>
 </html>
