menu script tag added

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
         <span>Socials:</span>
         <a href="https://www.linkedin.com/in/sebastian-pintyer-a0201a264" target="_blank" rel="noopener"><i class="ri-linkedin-box-fill"></i></a>
         <a href="https://github.com/PSebastian96" target="_blank" rel="noopener"><i class="ri-github-fill"></i></a>
-       </footer>
+    </footer>
+    
+    <!-- script link-->
+    <script src="JSscript/menuscript.js"></script>
 </body>
 </html>
