--- a/contact.html
+++ b/contact.html
@@ -51,5 +51,7 @@
     <a href="https://www.linkedin.com/in/sebastian-pintyer-a0201a264" target="_blank" rel="noopener"><i class="ri-linkedin-box-fill"></i></a>
     <a href="https://github.com/PSebastian96" target="_blank" rel="noopener"><i class="ri-github-fill"></i></a>
 </footer>
+   <!-- script link-->
+   <script src="JSscript/menuscript.js"></script>
 </body>
 </html>
