--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!-- fontawesome link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css link-->
-    <link rel="stylesheet" type="text/css" href="StylingCss/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylingcss/style.css">
     <title>Keytar-Contact</title>
      
    <!-- navigation bar -->
