menu and review script linked

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </footer>
     
     <!-- script link-->
-    <script src="JSscript/menuscript.js"></script>
+    <script src="Javascript/menuscript.js"></script>
+    <script src="Javascript/reviewscript.js"></script>
 </body>
 </html>
