--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,6 @@
     <a href="https://github.com/PSebastian96" target="_blank" rel="noopener"><i class="ri-github-fill"></i></a>
 </footer>
    <!-- script link-->
-   <script src="JSscript/menuscript.js"></script>
+   <script src="Javascript/menuscript.js"></script>
 </body>
 </html>
