--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,18 @@
     <!-- custom css link-->
     <link rel="stylesheet" type="text/css" href="assets/stylingcss/style.css">
     <title>Keytar-Contact</title>
-     
+
+    <!-- EmailJS script -->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("yp1Kp6JP0h3vnCeFf");
+   })();
+</script>
+
+</head>>
    <!-- navigation bar -->
    <header>
     <a href="index.html" id="logo">KeytarSchool</a>
