email js api added

--- a/contact.html
+++ b/contact.html
@@ -64,5 +64,6 @@
 </footer>
    <!-- script link-->
    <script src="Javascript/menuscript.js"></script>
+   <script src="JSscript/sendEmail.js"></script>
 </body>
 </html>
