emailjs script added to contact html

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,6 @@
 </footer>
    <!-- script link-->
    <script src="Javascript/menuscript.js"></script>
-   <script src="JSscript/sendEmail.js"></script>
+   <script src="Javascript/emailjsapi.js"></script>
 </body>
 </html>
