--- a/contact.html
+++ b/contact.html
@@ -65,5 +65,6 @@
    <!-- script link-->
    <script src="Javascript/menuscript.js"></script>
    <script src="Javascript/emailjsapi.js"></script>
+   <script src="Javascript/messagestatus.js"></script>
 </body>
 </html>
