--- a/subscription.html
+++ b/subscription.html
@@ -183,5 +183,9 @@
         <a href="https://www.linkedin.com/in/sebastian-pintyer-a0201a264" target="_blank" rel="noopener"><i class="ri-linkedin-box-fill"></i></a>
         <a href="https://github.com/PSebastian96" target="_blank" rel="noopener"><i class="ri-github-fill"></i></a>
     </footer>
+
+    <!-- script link-->
+    <script src="Javascript/menuscript.js"></script>
+    
 </body>
 </html>
