subscribepage script tag added

--- a/subscription.html
+++ b/subscription.html
@@ -186,6 +186,6 @@
 
     <!-- script link-->
     <script src="Javascript/menuscript.js"></script>
-    
+    <script src="Javascript/subscribepage.js"></script>
 </body>
 </html>
