question mark img added

--- a/subscription.html
+++ b/subscription.html
@@ -44,7 +44,7 @@
     <section id="faq-container">
         <div id="accordion-wrapper">
             <div id="img-box">
-                <img src="images/question-mark.png" alt="question-mark">
+                <img src="assets/images/question-mark.png" alt="question-mark">
             </div>
             <div id="accordion-txt">
              <h2 id="faq-title">F.A.Q.</h2>
@@ -174,7 +174,7 @@
                     <button id="cancel-btn">Cancel Subscription</button>
                 </div>
             </div>
-          </div>
+         </div>
     </section>
 
     <!-- footer section -->
