footer and menu script added

--- a/login.html
+++ b/login.html
@@ -30,7 +30,15 @@
     </ul>
     <div class="bx bx-menu" id="menu-icon"></div>
  </header>
+   <!-- footer section -->
+    <footer>
+    <span>Socials:</span>
+    <a href="https://www.linkedin.com/in/sebastian-pintyer-a0201a264" target="_blank" rel="noopener"><i class="ri-linkedin-box-fill"></i></a>
+    <a href="https://github.com/PSebastian96" target="_blank" rel="noopener"><i class="ri-github-fill"></i></a>
+    </footer>
 
- 
+    <!-- script link-->
+    <script src="Javascript/menuscript.js"></script>
+    <script src="Javascript/reviewscript.js"></script>
 </body>
 </html>
