--- a/login.html
+++ b/login.html
@@ -30,7 +30,40 @@
     </ul>
     <div class="bx bx-menu" id="menu-icon"></div>
  </header>
-   <!-- footer section -->
+   
+<!-- login and register section -->
+ <section class="log-reg-container">
+    <div class="log-reg-wrapper">
+      <div class="form register">
+        <h1>Register</h1>
+        <form class="log-reg-form">
+          <input type="text" placeholder="Full name" id="register-name" required>
+          <input type="text" placeholder="Email address" id="register-mail" required >
+          <input type="password" placeholder="Password" id="register-pass" required >
+          <div class="checkbox">
+            <input type="checkbox" id="signupCheck" required/>
+            <label for="signupCheck">I accept all terms & conditions</label>
+          </div>
+          <input type="submit" value="Signup" id="modal-register-btn">
+          <div id="msg-container">
+            <div class="success" id="success">Thank you for registering!</div>
+            <div class="failed" id="failed">Fill the form!</div>
+         </div>
+        </form>
+      </div>
+      <div class="form login">
+        <h1>Login</h1>
+        <form class="log-reg-form">
+          <input type="text" placeholder="Email address" required />
+          <input type="password" placeholder="Password" required />
+          <a href="#">Forgot password?</a>
+          <input type="submit" value="Login" class="log-btn" id="log-btn"/>
+        </form>
+      </div>
+    </div>  
+  </section>  
+
+    <!-- footer section -->
     <footer>
     <span>Socials:</span>
     <a href="https://www.linkedin.com/in/sebastian-pintyer-a0201a264" target="_blank" rel="noopener"><i class="ri-linkedin-box-fill"></i></a>
