--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kablammo&display=swap" rel="stylesheet">
     <!-- custom css link-->
-    <link rel="stylesheet" type="text/css" href="StylingCss/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylingcss/style.css">
     <title>KeytarSchool-Login</title>
 </head>
 <body>
