loginscript tag added

--- a/login.html
+++ b/login.html
@@ -72,5 +72,6 @@
 
     <!-- script link-->
     <script src="Javascript/menuscript.js"></script>
+    <script src="Javascript/loginscript.js"></script>
 </body>
 </html>
