code indentation fix

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
    })();
 </script>
 
-</head>>
+</head>
    <!-- navigation bar -->
    <header>
     <a href="index.html" id="logo">KeytarSchool</a>
