--- a/piano.html
+++ b/piano.html
@@ -14,12 +14,12 @@
     <!-- fontawesome link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css link-->
-    <link rel="stylesheet" type="text/css" href="StylingCss/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylingcss/style.css">
     <!-- piano css link-->
-    <link rel="stylesheet" type="text/css" href="StylingCss/piano.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylingcss/piano.css">
     <title>Keytar-Piano</title>
 </head>
 <body>
-    
+
 </body>
 </html>
