--- a/piano.html
+++ b/piano.html
@@ -20,6 +20,18 @@
     <title>Keytar-Piano</title>
 </head>
 <body>
-
+ 
+ <!-- navigation bar -->
+ <header>
+    <a href="index.html" id="logo">KeytarSchool</a>
+    <ul id="navlist">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="piano.html" class="current">Piano</a></li>
+        <li><a href="subscription.html">Subscribe</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="login.html">Log in</a></li>
+    </ul>
+    <div class="bx bx-menu" id="menu-icon"></div>
+  </header>
 </body>
 </html>
