menu script tag added

--- a/piano.html
+++ b/piano.html
@@ -43,7 +43,7 @@
   </footer>
 
   <!-- piano & metronome scripts -->
-  <script src=""></script>
+  <script src="Javascript/menuscript.js"></script>
 
 </body>
 </html>
