piano section added

--- a/piano.html
+++ b/piano.html
@@ -34,6 +34,15 @@
     <div class="bx bx-menu" id="menu-icon"></div>
   </header>
 
+  <!-- Piano section-->
+  <div id="piano-wrap-container">
+      <div id="piano-container">
+         <div id="top-piano">
+            
+         </div>
+      </div>
+  </div>
+
 
   <!-- footer section -->
   <footer>
