presets section added

--- a/piano.html
+++ b/piano.html
@@ -59,7 +59,21 @@
                     </div>    
                 </div>
              </div>
+                <!-- Preset section-->
+                <div id="presets" class="border">
+                    <h4 class="section-title">Presets</h4>
+                    <div id="preset-content">
+                        <div id="volume-slider">
+                         <span class="preset-txt">Volume</span> <input type="range" min="0" max="1" value="0.5" step="any">
+                        </div>
+                        <div id="keys-reveal">
+                         <span class="preset-txt">Hide Notes</span> <input type="checkbox">
+                        </div>
+                    </div>
+                </div>
          </div>
+               
+
       </div>
   </div>
 
