piano keys added

--- a/piano.html
+++ b/piano.html
@@ -72,8 +72,35 @@
                     </div>
                 </div>
          </div>
-               
-
+               <!-- Piano keys section-->
+           <div id="keys-wrapper">
+            <div id="piano-keyboard">
+              <div class="key key-white" data-key="c4"><span>c</span></div>
+              <div class="key key-black" data-key="db4"><span>c#</span></div>
+              <div class="key key-white" data-key="d4"><span>d</span></div>
+              <div class="key key-black" data-key="eb4"><span>d#</span></div>
+              <div class="key key-white" data-key="e4"><span>e</span></div>
+              <div class="key key-white" data-key="f4"><span>f</span></div>
+              <div class="key key-black" data-key="gb4"><span>f#</span></div>
+              <div class="key key-white" data-key="g4"><span>g</span></div>
+              <div class="key key-black" data-key="ab4"><span>g#</span></div>
+              <div class="key key-white" data-key="a4"><span>a</span></div>
+              <div class="key key-black" data-key="bb4"><span>a#</span></div>
+              <div class="key key-white" data-key="b4"><span>b</span></div>
+              <div class="key key-white" data-key="c5"><span>c</span></div>
+              <div class="key key-black" data-key="db5"><span>c#</span></div>
+              <div class="key key-white" data-key="d5"><span>d</span></div>
+              <div class="key key-black" data-key="eb5"><span>d#</span></div>
+              <div class="key key-white" data-key="e5"><span>e</span></div>
+              <div class="key key-white" data-key="f5"><span>f</span></div>
+              <div class="key key-black" data-key="gb5"><span>f#</span></div>
+              <div class="key key-white" data-key="g5"><span>g</span></div>
+              <div class="key key-black" data-key="ab5"><span>g#</span></div>
+              <div class="key key-white" data-key="a5"><span>a</span></div>
+              <div class="key key-black" data-key="bb5"><span>a#</span></div>
+              <div class="key key-white" data-key="b5"><span>b</span></div>
+            </div>
+            </div>
       </div>
   </div>
 
