metronome and piano script tags added

--- a/piano.html
+++ b/piano.html
@@ -113,6 +113,8 @@
 
   <!-- piano & metronome scripts -->
   <script src="Javascript/menuscript.js"></script>
+  <script src="Javascript/piano.js"></script>
+  <script src="Javascript/metronome.js"></script>
 
 </body>
 </html>
