metronome error module import fix

--- a/piano.html
+++ b/piano.html
@@ -114,7 +114,7 @@
   <!-- piano & metronome scripts -->
   <script src="Javascript/menuscript.js"></script>
   <script src="Javascript/piano.js"></script>
-  <script src="Javascript/metronome.js"></script>
+  <script src="Javascript/metronome.js" type="module"></script>
 
 </body>
 </html>
