--- a/subscription.html
+++ b/subscription.html
@@ -51,42 +51,42 @@
                <ul id="faq-txt">
                  <li>
                     <div class="faq-arrow">
-                        <span class="question">question1</span>
+                        <span class="question">1.Who is this website for ?</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, quisquam.</p>
+                    <p>This website is for anyone who likes music and wants to learn the piano/keys.</p>
                     <span class="line"></span>
                  </li>
                  <li>
                    <div class="faq-arrow">
-                        <span class="question">question2</span>
+                        <span class="question">2.Refund policy</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, quisquam.</p>
+                    <p>Keytarschool will refund you after 14 days of subscription start.</p>
                     <span class="line"></span>
                  </li>
                  <li>
                     <div class="faq-arrow">
-                        <span class="question">question3</span>
+                        <span class="question">What is the membership club ?</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, quisquam.</p>
+                    <p>Membership club is for premium users, where musicians can network and collab.</p>
                     <span class="line"></span>
                  </li>
                  <li>
                     <div class="faq-arrow">
-                        <span class="question">question4</span>
+                        <span class="question">Am I too old for piano ?</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, quisquam.</p>
+                    <p>The answer is NO! One is simply never too old to learn new things!</p>
                     <span class="line"></span>
                  </li>
                  <li>
                     <div class="faq-arrow">
-                        <span class="question">question5</span>
+                        <span class="question">Will I become a pro player ?</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, quisquam.</p>
+                    <p>In order to become a great player, it takes years of practice, this interactive piano is not enough, but a great start to help you get there!</p>
                     <span class="line"></span>
                  </li>
                </ul>
