--- a/subscription.html
+++ b/subscription.html
@@ -66,7 +66,7 @@
                  </li>
                  <li>
                     <div class="faq-arrow">
-                        <span class="question">What is the membership club ?</span>
+                        <span class="question">3.What is the membership club ?</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
                     <p>Membership club is for premium users, where musicians can network and collab.</p>
@@ -74,7 +74,7 @@
                  </li>
                  <li>
                     <div class="faq-arrow">
-                        <span class="question">Am I too old for piano ?</span>
+                        <span class="question">4.Am I too old for piano ?</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
                     <p>The answer is NO! One is simply never too old to learn new things!</p>
@@ -82,7 +82,7 @@
                  </li>
                  <li>
                     <div class="faq-arrow">
-                        <span class="question">Will I become a pro player ?</span>
+                        <span class="question">5.Will I become a pro player ?</span>
                         <i class="bx bxs-chevron-down arrow"></i>
                     </div>
                     <p>In order to become a great player, it takes years of practice, this interactive piano is not enough, but a great start to help you get there!</p>
@@ -168,7 +168,7 @@
              <div class="modal-content">
                 <span class="close">&times;</span>
                 <h3>Thank you for subscribing! :)</h3>
-                <p>To complete your subscription please register by clicking <a href="login.html">here!</a></p>
+                <p>To cancel your subscription please click the button below or by clicking the 'x'.</p>
                 <div id="cancel-center-btn">
                     <button id="cancel-btn">Cancel Subscription</button>
                 </div>
