--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
         <li><a href="piano.html">Piano</a></li>
         <li><a href="subscription.html">Subscribe</a></li>
         <li><a href="contact.html" class="current">Contact</a></li>
+        <li><a href="login.html">Login</a></li>
     </ul>
     <div class="bx bx-menu" id="menu-icon"></div>
 </header>
