--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="piano.html">Piano</a></li>
             <li><a href="subscription.html">Subscribe</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="login.html">Log in</a></li>
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
